--- a/index.html
+++ b/index.html
@@ -1,50 +1,27 @@
 <!DOCTYPE html>
-<!--[if lt IE 9 ]><html class="no-js oldie" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<html class="no-js" lang="en">
-<!--<![endif]-->
-
+<html class="no-js" lang="ru">
 <head>
-
-    <!--- basic page needs
-    ================================================== -->
     <meta charset="utf-8">
-    <title>Glint</title>
+    <title>Снадоб</title>
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <!-- mobile specific metas
-    ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- CSS
-    ================================================== -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
-
-    <!-- script
-    ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
-
-    <!-- favicons
-    ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
 </head>
 
 <body id="top">
 
-    <!-- header
-    ================================================== -->
     <header class="s-header">
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo.png" alt="Homepage">
+                <img src="img2/logo.svg" alt="Homepage">
             </a>
         </div>
 
@@ -53,9 +30,9 @@
             <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
 
             <div class="header-nav__content">
-                <h3>Navigation</h3>
+                <h3>Если ты нас ищешь...</h3>
 
-                <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
+                <p>То для тебя, мы существуем в таких социальных сетях как Facebook и Behance. Мы всегда будем рады тебе!</p>
 
                 <ul class="header-nav__social">
                     <li>
@@ -72,11 +49,17 @@
         </a>
     </header>
 
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="img2/horse.svg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
-
+        <div id="bubbles">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+</div>
         <div class="home-content">
 
             <div class="row home-content__main">
@@ -88,6 +71,7 @@
                     в нашей лавке волшебства.
                 </h1>
             </div>
+
             <div class="home-content__scroll">
                 <a href="#about" class="scroll-link smoothscroll">
                     <span>Вниз</span>
@@ -147,19 +131,15 @@
 <img src="img2/1.svg" class="frogs"></img>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Brand Identity</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Начало истории</h3>
+                    <p>История лавки &laquo;СНАДОБ&raquo; пустила свои корни еще в&nbsp;1599&nbsp;году, когда магия была легальной.Все были счастливы, и&nbsp;надеялись, что магия останется нетронутой. И&nbsp;вот, 2019&nbsp;год, спустя столько лет, приходится самим добывать магию из&nbsp;настойки жаб.
                     </p>
                 </div>
             </div>
 
                 <div class="service-text">
-                    <h3 class="h2">Illustration</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Неожиданно</h3>
+                    <p>Вдруг жаба очнулась, и&nbsp;решила покорить свет. Раскачавшись, она смогла вылезти на&nbsp;ружу, но&nbsp;поможет&nbsp;ли ей&nbsp;это?...
                     </p>
                 </div>
                 <div class="col-block service-item" data-aos="fade-up">
@@ -171,10 +151,8 @@
 <img src="img2/3.svg" class="frogswatertwo"></img>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Marketing</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Не получилось...</h3>
+                    <p>Жабка была растроенна, но&nbsp;взяла все свои силы в&nbsp;маленький кулачок, и&nbsp;решила покушать. Ничего не&nbsp;предвещало беды, но&nbsp;она не&nbsp;смогла дотянуться до&nbsp;жучка, ведь она была такой большой.
                     </p>
                 </div>
             </div>
@@ -183,10 +161,8 @@
 <img src="img2/4.svg" class="frogall"></img>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Web Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Очень грустненько.</h3>
+                    <p>Маленькая жабка очень растроилась, что не&nbsp;смогла поймать эту кроху. Никогда не&nbsp;надо отчаиваться, и&nbsp;надо верить в&nbsp;лучшее! На&nbsp;этот случай, наши зелья помогут вам, обрести&nbsp;то, чего вам очень хочется.
                     </p>
                 </div>
             </div>
@@ -194,10 +170,8 @@
 <img src="img2/5.svg" class="frogsen"></img>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Web Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Наконец-то все стало хорошо!</h3>
+                    <p>Мистер фрог очень счастлив, ведь теперь из-за зелья у&nbsp;него появилась подружка. Она не&nbsp;особо разговорчива, но&nbsp;для него&nbsp;&mdash; она все болото.
                     </p>
                 </div>
             </div>
@@ -205,23 +179,11 @@
 <img src="img2/6.svg" class="frogone"></img>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Web Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Надо немного выпить...</h3>
+                    <p>Мистер жаба решил отпраздновать это событие, поэтому пригласил миссис жабанью отведать зелья. Ведь только зелье, может сделать этот мир&nbsp;&mdash; идеальным.
                     </p>
                 </div>
             </div>
-            <div class="col-block service-item" data-aos="fade-up">
-<img src="img2/8.svg" class="froghappy"></img>
-                </div>
-                <div class="service-text">
-                    <h3 class="h2">Web Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium.
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
-                    </p>
-                </div>
             </div>
         </div> <!-- end services-list -->
 
@@ -233,8 +195,8 @@
 
             <div class="row section-header has-bottom-sep light-sep" data-aos="fade-up">
                 <div class="col-full">
-                    <h3 class="subhead">Recent Works</h3>
-                    <h1 class="display-2 display-2--light">We love what we do, check out some of our latest works</h1>
+                    <h3 class="subhead">А теперь, выбери свое зелье</h3>
+                    <h1 class="display-2 display-2--light">У тебя есть все шансы быть счастливым!</h1>
                 </div>
             </div> <!-- end section-header -->
             <div class="box">
@@ -249,10 +211,10 @@
             									<p>Для беляшей идеально подходит домашний фарш. Я предпочитаю покупать мясо на рынке и делать фарш самостоятельно.</p>
             								</div>
             								<div>
-                                <img src="img2/z1.svg" class="strawberry"></img>
+                                <img src="img2/z2.svg" class="strawberry"></img>
             								</div>
             						    <div>
-                               <img src="img2/z1.svg" class="strawberry"></img>
+                               <img src="img2/z3.svg" class="strawberry"></img>
                             </div>
             								<div class="text2">
             									<p>Для беляшей идеально подходит домашний фарш. Я предпочитаю покупать мясо на рынке и делать фарш самостоятельно.</p>
@@ -261,7 +223,7 @@
             									<p>Для беляшей идеально подходит домашний фарш. Я предпочитаю покупать мясо на рынке и делать фарш самостоятельно.</p>
                             </div>
                             <div>
-                               <img src="img2/z1.svg" class="strawberry"></img>
+                               <img src="img2/z4.svg" class="strawberry"></img>
                             </div>
                           </div>
         </div> <!-- end intro-wrap -->
